--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
