--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "react-slick": "^0.31.0",
+    "redux-logger": "^3.0.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.17"
@@ -35,6 +36,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.13",
     "@vitejs/plugin-react": "^5.0.4",
     "daisyui": "^5.4.7",
     "eslint": "^9.36.0",
