--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "react-slick": "^0.31.0",
+    "react-toastify": "^11.0.5",
     "redux-logger": "^3.0.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.19",
