--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "redux-logger": "^3.0.6",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.19",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
